--- a/style.css
+++ b/style.css
@@ -1,57 +1,154 @@
-body{
-    font-family: 'Noto Sans JP', sans-serif;
-    text-align: left;
-    width: 1000px;
-    margin: 0 auto;
-    max-width: 100%;
+body {
+  font-family: "Noto Sans JP", sans-serif;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
-header{
-   padding: 10 0;
-    display: flex;
-  
+html {
+  scroll-behavior: smooth;
 }
-nav{
-    display: flex;
-    padding: 10px;
-    
+header {
+  display: flex;
+  position: fixed;
+  background-color: rgb(204, 85, 6);
+  width: 100%;
+  color: white;
+  justify-content: end;
 }
-nav div a{  
-    line-height: 35px;
-    padding: 10px;
-    
-}
-a:hover{  
-    color:rgb(153, 148, 141);
-    
-}
-header h1{
-    margin-right: auto;
-    font-weight:600;
+scroll-container {
+  display: block;
+  overflow-y: scroll;
 }
 
-.skills-img img{
-    width: 5%;
-    padding: 10px;
-    transition: width 1s;
-}
-a{
-    color: black;
-}
-.img-contact img{
-    padding: 5px;
-    width: 5%;
-    
+nav a {
+  line-height: 35px;
+  color: white;
+  text-decoration: none;
+  padding: 15px;
 }
 
-
-ul{
-    transition: visibility 2s;
+a {
+  color: black;
+  text-decoration: none;
 }
-@media screen and (max-width: 650px) {
-   header {
-        flex-direction: column;
-    }
-    nav {
-        flex-direction: column;
-    }
+
+#welcome-section {
+  height: 100vh;
+  background-image: linear-gradient(
+    to bottom right,
+    rgb(17, 17, 17),
+    rgb(87, 87, 87)
+  );
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+#welcome-section h1 {
+  margin: 10px;
+  font-size: xx-large;
+}
+#projects {
+  display: flex;
+  flex-direction: column;
+  background-color: whitesmoke;
+}
+.project-items {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.project-items a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-decoration: none;
+  margin: 10px;
+  border: 2px solid rgb(255, 255, 255);
+}
+.project-items img {
+  transition: border 1s, transform 1s;
+  width: 300px;
+  border: 2px solid rgb(255, 255, 255);
+}
+.project-items img:hover {
+  transform: translate(10px, 10px);
+  border: 2px solid rgb(204, 85, 6);
+}
+.project-name {
+  padding: 5px;
+}
+.project-tile {
+  display: flex;
+  justify-content: center;
+}
+#navbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#navbar a:hover {
+  background-color: rgb(87, 87, 87);
+}
+#profile-link {
+}
+#contact {
+  display: flex;
+  flex-direction: column;
+  background-image: linear-gradient(
+    to bottom right,
+    rgb(17, 17, 17),
+    rgb(87, 87, 87)
+  );
+  align-items: center;
+  color: white;
+}
+.contact-items {
+  display: flex;
+}
+.contact-items a {
+  margin: 10px;
+  color: white;
+}
+.contact-items a:hover {
+  margin: 10px;
+  color: rgb(204, 85, 6);
+}
+
+#skills {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: whitesmoke;
+}
+.skills-items i {
+  margin: 10px;
+}
+#certifies {
+  background-color: whitesmoke;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.certifies-items {
+  display: flex;
+}
+.certifies-items a {
+  margin: 10px;
+}
+.certifies-items a:hover {
+  color: rgb(204, 85, 6);
+}
+@media only screen and (max-width: 650px) {
+  header {
+    flex-direction: column;
   }
+  nav {
+    flex-direction: column;
+  }
+  nav a {
+    width: 100%;
+    text-align: center;
+  }
+}
